# membuddy

./: .gitignore  ALIYUN_ONE_CLICK_DEPLOY.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_MIRRORS_SETUP.md  LOCAL_DEPLOY_README.md  MP_verify_mluLfyNcp0fnRTDW.txt  MemBuddy API.postman_collection.json  README.md  deploy-aliyun.sh  deploy-china.sh  deploy-global.sh  deploy.sh  docker-compose.china.yml  docker-compose.global.yml  docker-daemon.json  gemini.md  setup-docker-mirrors.sh  setup-local-dev.sh
.vercel/: project.json
back/: .dockerignore  .env.aliyun.example  .env.china.example  .env.example  .env.global.example  ALIYUN_DEPLOY.md  DEPLOY.md  DOCKER.md  DOCKERHUB.md  DOCKER_GOOGLE_CLOUD.md  Dockerfile  README.md  ZHIPU_SETUP.md  __init__.py  ai_manager.py  ai_providers_china.py  ai_providers_global.py  base_provider.py  build-docker.sh  config.py  database.py  dependencies.py  docker-compose.yml  gemini.py  main.py  mock_ai_provider.py  mock_store.py  prompt_templates.py  push-to-dockerhub.sh  pyproject.toml  render.yaml  requirements.txt  schemas.py  start.sh  test_ai_manager.py  test_ai_providers.py  test_api.py  test_api_mock.py  test_http_mock.py  test_mock_ai.py  (+3 more)
back/routers/: __init__.py  ai_generation.py  auth.py  memory_items.py  reviews.py  sharing.py
front/: .env.example  VERCEL_DEPLOY.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
mina/: API配置说明.md  SSL证书配置指南.md  app.js  app.json  app.wxss  project.config.json  test-integration.js  小程序域名配置指南.md  快速开始指南.md  用户中心配置说明.md  用户中心集成测试指南.md
nginx/: .env.example  (+8 more)
(+147 files in other folders)
