[project]
name = "membuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "supabase>=2.0.0",
    "google-generativeai>=0.3.0",
    "pydantic-settings>=2.10.1",
    "email-validator>=2.2.0",
    "google-cloud-texttospeech>=2.27.0",
    "google-cloud-aiplatform>=1.105.0",
    "httpx[socks]>=0.28.1",
]
